# mwpf-web

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue
loadtest/: Cargo.toml  report-aws.html  report-m1max-html.html  report-m1max.html
loadtest/src/: main.rs
src/: codes.rs  main.rs
