[package]
name = "mwpf-web"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
actix-rt = "2.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
env_logger = "0.10"
log = "0.4"
clap = { version = "4.0", features = ["derive"] }
lazy_static = "1.4"
num-traits = "0.2.15"

mwpf = { git = "https://github.com/yuewuo/mwpf.git" }
# mwpf = { path = "../mwpf" }
smol = "2.0.2"
